--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6193c39
+	base = aa83229
 	trimbase = 
 	parent = release/indigo/visualization_msgs
-	previous = 
+	previous = 6193c39
