--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1e90ddb
+	base = 5f8883f
 	trimbase = 
 	parent = rpm/indigo/visualization_msgs
-	previous = 
+	previous = 1e90ddb
