--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a217da2
+	base = e3e0e6c
 	trimbase = 
 	parent = release/indigo/nav_msgs
-	previous = 
+	previous = a217da2
