--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8e8cce1
+	base = 05b79da
 	trimbase = 
 	parent = rpm/indigo/nav_msgs
-	previous = 
+	previous = 8e8cce1
