--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d4e259f
+	base = 6818aa5
 	trimbase = 
 	parent = release/indigo/stereo_msgs
-	previous = 
+	previous = d4e259f
