--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1ddbafd
+	base = 955796f
 	trimbase = 
 	parent = rpm/indigo/stereo_msgs
-	previous = 
+	previous = 1ddbafd
