--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1f5d76c
+	base = 00d6a4d
 	trimbase = 
 	parent = release/indigo/trajectory_msgs
-	previous = 
+	previous = 1f5d76c
