--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 21c3303
+	base = 0f85ee0
 	trimbase = 
 	parent = rpm/indigo/trajectory_msgs
-	previous = 
+	previous = 21c3303
