--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 71138e5
+	base = da03f1f
 	trimbase = 
 	parent = release/indigo/geometry_msgs
-	previous = 
+	previous = 71138e5
