--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 395cedc
+	base = f6f350d
 	trimbase = 
 	parent = rpm/indigo/geometry_msgs
-	previous = 
+	previous = 395cedc
