--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8a6fd50
+	base = 9e1122d
 	trimbase = 
 	parent = release/indigo/shape_msgs
-	previous = 
+	previous = 8a6fd50
