--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9dcf878
+	base = 8b8abdf
 	trimbase = 
 	parent = rpm/indigo/shape_msgs
-	previous = 
+	previous = 9dcf878
