--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 275efa2
+	base = f461a74
 	trimbase = 
 	parent = release/indigo/diagnostic_msgs
-	previous = 
+	previous = 275efa2
