--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 52f4623
+	base = 0d100da
 	trimbase = 
 	parent = rpm/indigo/diagnostic_msgs
-	previous = 
+	previous = 52f4623
