--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3b3f55f
+	base = 3fc8b15
 	trimbase = 
 	parent = release/indigo/sensor_msgs
-	previous = 
+	previous = 3b3f55f
