--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 107b087
+	base = d994fec
 	trimbase = 
 	parent = rpm/indigo/sensor_msgs
-	previous = 
+	previous = 107b087
