--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 26d283a
+	base = 6063e94
 	trimbase = 
 	parent = release/indigo/common_msgs
-	previous = 
+	previous = 26d283a
