--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 696938d
+	base = 0cd9a42
 	trimbase = 
 	parent = rpm/indigo/common_msgs
-	previous = 
+	previous = 696938d
