--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = nav_msgs
-	base = bc0b99f
-	trimbase = 
+	base = 1442f94
+	trimbase = bc0b99f
 	parent = upstream
 	previous = b30b166
