--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = shape_msgs
-	base = 068031e
-	trimbase = 
+	base = 84d456c
+	trimbase = 068031e
 	parent = upstream
 	previous = b30b166
