--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stereo_msgs
-	base = 6900556
-	trimbase = 
+	base = 3c90807
+	trimbase = 6900556
 	parent = upstream
 	previous = b30b166
