--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = actionlib_msgs
-	base = 9f24591
-	trimbase = 
+	base = 24ff569
+	trimbase = 9f24591
 	parent = upstream
 	previous = b30b166
