--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_msgs
-	base = 1c479a0
-	trimbase = 
+	base = 22e844d
+	trimbase = 1c479a0
 	parent = upstream
 	previous = b30b166
