--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sensor_msgs
-	base = 67354e4
-	trimbase = 
+	base = 65f45b0
+	trimbase = 67354e4
 	parent = upstream
 	previous = b30b166
