--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = geometry_msgs
-	base = 6ee7b9d
-	trimbase = 
+	base = 800489f
+	trimbase = 6ee7b9d
 	parent = upstream
 	previous = b30b166
