--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visualization_msgs
-	base = c168c2d
-	trimbase = 
+	base = a094d99
+	trimbase = c168c2d
 	parent = upstream
 	previous = b30b166
