--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = diagnostic_msgs
-	base = 99911f3
-	trimbase = 
+	base = 0c389b4
+	trimbase = 99911f3
 	parent = upstream
 	previous = b30b166
