--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = common_msgs
-	base = 5b36cc2
-	trimbase = 
+	base = 499a90f
+	trimbase = 5b36cc2
 	parent = upstream
 	previous = b30b166
