--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = de222dd
+	base = 1b2776f
 	trimbase = 
 	parent = rpm/indigo/actionlib_msgs
-	previous = 
+	previous = de222dd
