--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9ac1503
+	base = c74194a
 	trimbase = 
 	parent = rpm/indigo/visualization_msgs
-	previous = 
+	previous = 9ac1503
