--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 74b5d42
+	base = d9efc72
 	trimbase = 
 	parent = rpm/indigo/nav_msgs
-	previous = 
+	previous = 74b5d42
