--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b16d1a1
+	base = 4f88d40
 	trimbase = 
 	parent = rpm/indigo/stereo_msgs
-	previous = 
+	previous = b16d1a1
