--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 261db45
+	base = 86cebdc
 	trimbase = 
 	parent = rpm/indigo/trajectory_msgs
-	previous = 
+	previous = 261db45
