--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c7d4ab4
+	base = ac52d7d
 	trimbase = 
 	parent = rpm/indigo/geometry_msgs
-	previous = 
+	previous = c7d4ab4
