--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5653292
+	base = 7136fb7
 	trimbase = 
 	parent = rpm/indigo/shape_msgs
-	previous = 
+	previous = 5653292
