--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a17529d
+	base = 9db8c37
 	trimbase = 
 	parent = rpm/indigo/diagnostic_msgs
-	previous = 
+	previous = a17529d
