--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fa10a07
+	base = 08651d4
 	trimbase = 
 	parent = rpm/indigo/sensor_msgs
-	previous = 
+	previous = fa10a07
