--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8c4f018
+	base = b5c8da8
 	trimbase = 
 	parent = rpm/indigo/common_msgs
-	previous = 
+	previous = 8c4f018
